# repl

./: .gitignore  README.md  REPL.lean  Test.lean  find_first_failing_commit.sh  lake-manifest.json  lakefile.lean  lakefile.toml  lean-toolchain  run  stats.txt  stats_naive.txt  tag_and_push_all.sh  test.py  test.sh  testtimeout.py  update-test.sh  update_lean_version.sh  versioning.md
REPL/: Actions.lean  Basic.lean  ExtractData.lean  Frontend.lean  InfoTree.lean  JSON.lean  Main.lean  Proof.lean  ProofState.lean  Snapshots.lean
pylean/: pyproject.toml
test/: aime_1983_p9.code.in  aime_1983_p9.expected.out  aime_1983_p9.in  all_tactics-20250622.expected.out  all_tactics-20250622.in  all_tactics.expected.out  app_type_mismatch.expected.out  app_type_mismatch.in  app_type_mismatch2.expected.out  app_type_mismatch2.in  app_type_mismatch2_parallel.expected.out  app_type_mismatch2_parallel.in  assumption_proof.expected.out  assumption_proof.in  auxiliary_declaration.expected.out  auxiliary_declaration.in  by_cases.expected.out  by_cases.in  by_cases.lean  calc.expected.out  calc.in  conclusion.expected.out  conclusion.in  def_eval.expected.out  def_eval.in  discardCmd.in  discardCmd2.in  discardCmd_proof.in  dup_msg.expected.out  dup_msg.in  dup_sorries.expected.out  dup_sorries.in  enableInitializersExecution.expected.out  extract_declaration.expected.out  extract_declaration.in  extract_declaration.lean  file.expected.out  file.in  (+155 more)
test/dynlib/: CMakeLists.txt  Dynlib.lean  Main.lean  README.md  fail.in  lake-manifest.json  lakefile.lean  mylib.c  success.in  test.sh
(+80 files in other folders)
